--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="search">Search</string>
     <string name="date_format">%1$d/%2$d/%3$d</string>
     <string name="guest_name_error">Guest name is required</string>
+    <string name="guest_age_error">Age is required (1 to 99)</string>
     <string name="n_guests_error">Number of guests is required</string>
     <string name="check_in_date_null_error">Check-in date is required</string>
     <string name="check_out_date_null_error">Check-out date is required</string>
@@ -15,4 +16,14 @@
     <string name="check_out_before_check_in_error">Check-out date must be after check-in date</string>
     <string name="reservation_info">Guest Name: %1$s\nNumber of Guests: %2$d\nCheck-in Date: %3$s\nCheck-out Date: %4$s</string>
     <string name="hotel_list">Hotel List</string>
+    <string name="reservation">Reservation</string>
+    <string name="guest_age">Age</string>
+    <string name="guest_gender">Gender</string>
+    <string-array name="gender_array">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string-array>
+    <string name="submit">Submit</string>
+    <string name="confirmation">Thank you for your reservation, your reservation number is %1d.</string>
 </resources>
